[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/objects/ui_components/popups/popup_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/ui_components/popups/algo_picker_algorithms_popup.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]

[node name="AlgoPickerAlgorithmsPopup" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Content" parent="." index="1"]
margin_left = 387.0
margin_top = 172.0
margin_right = 572.0
margin_bottom = 367.0

[node name="VBoxContainer" parent="Content" index="0"]
margin_right = 178.0
margin_bottom = 188.0

[node name="Title" parent="Content/VBoxContainer" index="0"]
margin_right = 171.0
text = "Choose an algorithm"

[node name="AlgoChoice" type="Label" parent="Content/VBoxContainer" index="1"]
margin_top = 25.0
margin_right = 171.0
margin_bottom = 46.0
text = "<None>"
align = 1
autowrap = true

[node name="Algorithms" type="MarginContainer" parent="Content/VBoxContainer" index="2"]
margin_top = 50.0
margin_right = 171.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 100 )

[node name="ScrollContainer" type="ScrollContainer" parent="Content/VBoxContainer/Algorithms" index="0"]
margin_right = 171.0
margin_bottom = 100.0
scroll_horizontal_enabled = false

[node name="PanelContainer" type="PanelContainer" parent="Content/VBoxContainer/Algorithms/ScrollContainer" index="0"]
margin_right = 171.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Content/VBoxContainer/Algorithms/ScrollContainer/PanelContainer" index="0"]
margin_right = 171.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Choice" parent="Content/VBoxContainer" index="3"]
margin_top = 154.0
margin_right = 171.0
margin_bottom = 181.0

[node name="OK" parent="Content/VBoxContainer/Choice" index="0"]
margin_right = 83.0

[node name="Cancel" parent="Content/VBoxContainer/Choice" index="1"]
margin_left = 87.0
margin_right = 171.0

[node name="Sure" type="VBoxContainer" parent="Content" index="1"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 351.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="Content/Sure" index="0"]
margin_right = 344.0
margin_bottom = 21.0
text = "This will reset any ongoing sort, continue?"

[node name="Choice" type="HBoxContainer" parent="Content/Sure" index="1"]
margin_top = 25.0
margin_right = 344.0
margin_bottom = 52.0

[node name="OK" type="Button" parent="Content/Sure/Choice" index="0"]
margin_right = 170.0
margin_bottom = 27.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="Content/Sure/Choice" index="1"]
margin_left = 174.0
margin_right = 344.0
margin_bottom = 27.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="pressed" from="Content/Sure/Choice/OK" to="." method="_on_sure_ok_pressed"]
[connection signal="pressed" from="Content/Sure/Choice/Cancel" to="." method="_on_sure_cancel_pressed"]
